--- a/template.ipynb
+++ b/template.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "intro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDUBEakQ7ErYH2NjMRKOKc",
+      "authorship_tag": "ABX9TyOTrvwEdKGYxKYKOsiAOejs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,12 +39,35 @@
       "source": [
         "print(\"Hello world!\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Hello world!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_FNTHCYihCkZ",
+        "outputId": "206b9fbb-0021-43d6-af95-6d730107283e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"Hello colab!\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello colab!\n"
           ],
           "name": "stdout"
         }
