--- a/template.ipynb
+++ b/template.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "intro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTrvwEdKGYxKYKOsiAOejs",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMs9GJgbVAmsbT8Bn/L0KeF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,49 +29,318 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "upOn2c3MiZtQ"
+      },
+      "source": [
+        "### Sales"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "EwV1CBN3dPt2",
-        "outputId": "9b33b45c-7f14-49ea-93ff-ede31deca6c5"
+        "id": "_Czq8FGkh0sJ",
+        "outputId": "b4f6416c-bef9-4a26-b567-d271c82c296b"
       },
       "source": [
-        "print(\"Hello world!\")"
+        "revenue = 10000\n",
+        "tax = 0.19\n",
+        "income = revenue*tax\n",
+        "income"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Hello world!\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1900.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_FNTHCYihCkZ",
-        "outputId": "206b9fbb-0021-43d6-af95-6d730107283e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1K6xrxu8iVvy",
+        "outputId": "c858de7d-f719-452f-a994-dfd0e0dd4977"
       },
       "source": [
-        "print(\"Hello colab!\")"
+        "print(income)"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Hello colab!\n"
+            "1900.0\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VCKY1j1yikE1"
+      },
+      "source": [
+        "### Summary"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "WGHhAuEpiuv8",
+        "outputId": "b0dce959-8515-458a-ac87-5616105afb8c"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np.__version__"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'1.19.5'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tpL5UQRLjFst"
+      },
+      "source": [
+        "np.random.rand?"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hJtaAr8bjdPt"
+      },
+      "source": [
+        "import imageai"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 850
+        },
+        "id": "TsIJ7OH3jqgH",
+        "outputId": "9798adf7-824e-42c0-d899-f06aa2ce0739"
+      },
+      "source": [
+        "pip install imageai"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting imageai\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/73/44/3d5d8ef572888025666eec284e85f9243faf06ca8c12085dcff1ca9754ed/imageai-2.1.6-py3-none-any.whl (160kB)\n",
+            "\u001b[K     |████████████████████████████████| 163kB 2.9MB/s \n",
+            "\u001b[?25hRequirement already satisfied: keras==2.4.3 in /usr/local/lib/python3.7/dist-packages (from imageai) (2.4.3)\n",
+            "Collecting numpy==1.19.3\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/65/b3/07864c89acb2a86df6f2e8c9bf091ec5916da58dd3ce3a633a51a02c115e/numpy-1.19.3-cp37-cp37m-manylinux2010_x86_64.whl (14.9MB)\n",
+            "\u001b[K     |████████████████████████████████| 14.9MB 227kB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy==1.4.1 in /usr/local/lib/python3.7/dist-packages (from imageai) (1.4.1)\n",
+            "Collecting keras-resnet==0.2.0\n",
+            "  Downloading https://files.pythonhosted.org/packages/76/d4/a35cbd07381139dda4db42c81b88c59254faac026109022727b45b31bcad/keras-resnet-0.2.0.tar.gz\n",
+            "Collecting matplotlib==3.3.2\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/87/a6/8d7d06f6b69236a3c1818157875ceb1259ba0d9df4194f4fe138ffdc0f41/matplotlib-3.3.2-cp37-cp37m-manylinux1_x86_64.whl (11.6MB)\n",
+            "\u001b[K     |████████████████████████████████| 11.6MB 31.5MB/s \n",
+            "\u001b[?25hCollecting pillow==7.0.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f5/79/b2d5695d1a931474fa68b68ec93bdf08ba9acbc4d6b3b628eb6aac81d11c/Pillow-7.0.0-cp37-cp37m-manylinux1_x86_64.whl (2.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.1MB 37.7MB/s \n",
+            "\u001b[?25hRequirement already satisfied: h5py==2.10.0 in /usr/local/lib/python3.7/dist-packages (from imageai) (2.10.0)\n",
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (from imageai) (4.1.2.30)\n",
+            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.7/dist-packages (from keras==2.4.3->imageai) (3.13)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2.4.7)\n",
+            "Requirement already satisfied: certifi>=2020.06.20 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2020.12.5)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (1.3.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (0.10.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib==3.3.2->imageai) (2.8.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from h5py==2.10.0->imageai) (1.15.0)\n",
+            "Building wheels for collected packages: keras-resnet\n",
+            "  Building wheel for keras-resnet (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for keras-resnet: filename=keras_resnet-0.2.0-py2.py3-none-any.whl size=20486 sha256=3f7da11a912c8c2e4b85c5a389ed75fa72e78048c80467b86ae1ba2c8b9dc01f\n",
+            "  Stored in directory: /root/.cache/pip/wheels/5f/09/a5/497a30fd9ad9964e98a1254d1e164bcd1b8a5eda36197ecb3c\n",
+            "Successfully built keras-resnet\n",
+            "\u001b[31mERROR: datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.8.3 which is incompatible.\u001b[0m\n",
+            "\u001b[31mERROR: bokeh 2.3.2 has requirement pillow>=7.1.0, but you'll have pillow 7.0.0 which is incompatible.\u001b[0m\n",
+            "\u001b[31mERROR: albumentations 0.1.12 has requirement imgaug<0.2.7,>=0.2.5, but you'll have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
+            "Installing collected packages: numpy, keras-resnet, pillow, matplotlib, imageai\n",
+            "  Found existing installation: numpy 1.19.5\n",
+            "    Uninstalling numpy-1.19.5:\n",
+            "      Successfully uninstalled numpy-1.19.5\n",
+            "  Found existing installation: Pillow 7.1.2\n",
+            "    Uninstalling Pillow-7.1.2:\n",
+            "      Successfully uninstalled Pillow-7.1.2\n",
+            "  Found existing installation: matplotlib 3.2.2\n",
+            "    Uninstalling matplotlib-3.2.2:\n",
+            "      Successfully uninstalled matplotlib-3.2.2\n",
+            "Successfully installed imageai-2.1.6 keras-resnet-0.2.0 matplotlib-3.3.2 numpy-1.19.3 pillow-7.0.0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "PIL",
+                  "matplotlib",
+                  "mpl_toolkits",
+                  "numpy"
+                ]
+              }
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EbiT9XlAjy-u"
+      },
+      "source": [
+        "import imageai"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vgk52FHGksAi"
+      },
+      "source": [
+        "### Markdown"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n67n97vHkv4-"
+      },
+      "source": [
+        "Examples of *markdown*  \n",
+        "Example sof **markdown**   \n",
+        "Example sof __markdown__  \n",
+        "Example sof `markdown`  \n",
+        "\n",
+        "```\n",
+        "Example sof markdown  \n",
+        "```\n",
+        "\n",
+        "> Python  \n",
+        ">>> Code  \n",
+        "\n",
+        "A ordered list:\n",
+        "1. One\n",
+        "2. Two\n",
+        "3. Three\n",
+        "\n",
+        "An unordered list:\n",
+        "* One\n",
+        "* Two\n",
+        "* Three\n",
+        "\n",
+        "[Google](https://www.google.com/)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n_eXVFXqmvLA"
+      },
+      "source": [
+        "![Python](https://icon-library.com/images/python-icon-png/python-icon-png-6.jpg)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7yBqP6IwoNj6"
+      },
+      "source": [
+        "$y = x^2$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ns9VtVHyobD-"
+      },
+      "source": [
+        "$\\frac{1}{n} \\sum_{i=1}^{n}x_{i}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JTUgCCaRpNBF"
+      },
+      "source": [
+        "$A = \\begin{pmatrix}\n",
+        "a_{1, 1} & a_{1, 2} \\\\\n",
+        "a_{2, 1} & a_{2, 2}\n",
+        "\\end{pmatrix}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ijx6MTo3qUlR"
+      },
+      "source": [
+        "Col1 | Col2 | Col3\n",
+        "--- | ---| ---\n",
+        "Vol1 | Vol2 | Vol3\n",
+        "Vol4 | Vol5 | Vol6"
       ]
     }
   ]
