--- a/NumPy100Exercises.ipynb
+++ b/NumPy100Exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMNCQwbH0sCahGv2kJC1jJA",
+      "authorship_tag": "ABX9TyM3xW60Vp6YSIyiSd5MsuhV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,12 +39,35 @@
       "source": [
         "print(\"Hello world!\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Hello world!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "odsvzVT-YUo_",
+        "outputId": "cbb04d34-2050-4272-b985-76a3406d250e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"Hello Colab!\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello Colab!\n"
           ],
           "name": "stdout"
         }
