--- a/NumPy100Exercises.ipynb
+++ b/NumPy100Exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM3xW60Vp6YSIyiSd5MsuhV",
+      "authorship_tag": "ABX9TyPGRUbhlJhjlPi+cqeHXNw6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,46 +28,50 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4Mu850q-ZV94"
+      },
+      "source": [
+        "### **Exercise 001**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLfQtoLIVh4d",
-        "outputId": "8c99d8c3-a449-4464-ce5a-1ff071f83329"
+        "outputId": "5668f267-cdcf-4b50-c8b1-b2f10dbeb00c"
       },
       "source": [
-        "print(\"Hello world!\")"
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "A = np.array([[3, 2, 1, 4],\n",
+        "              [5, 2, 1, 6]])\n",
+        "\n",
+        "B = np.array([[3, 2, 1, 4],\n",
+        "              [5, 2, 0, 6]])\n",
+        "\n",
+        "C = np.array([[True, False, False],\n",
+        "              [True, True, True]])\n",
+        "\n",
+        "D = np.array([0.1, 0.3])\n",
+        "\n",
+        "for name, array in zip(list('ABCD'), [A, B, C, D]):\n",
+        "    print(f'{name}: {np.all(array)}')"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Hello world!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "odsvzVT-YUo_",
-        "outputId": "cbb04d34-2050-4272-b985-76a3406d250e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "print(\"Hello Colab!\")"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Hello Colab!\n"
+            "A: True\n",
+            "B: False\n",
+            "C: False\n",
+            "D: True\n"
           ],
           "name": "stdout"
         }
