--- a/NumPy100Exercises.ipynb
+++ b/NumPy100Exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPGRUbhlJhjlPi+cqeHXNw6",
+      "authorship_tag": "ABX9TyMA+hiMWJB5xeU2P+9xlttW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLfQtoLIVh4d",
-        "outputId": "5668f267-cdcf-4b50-c8b1-b2f10dbeb00c"
+        "outputId": "b8bb44c3-fd74-4cb3-fb44-0deee4bda7ff"
       },
       "source": [
         "import numpy as np\n",
@@ -63,7 +63,7 @@
         "for name, array in zip(list('ABCD'), [A, B, C, D]):\n",
         "    print(f'{name}: {np.all(array)}')"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,6 +72,53 @@
             "B: False\n",
             "C: False\n",
             "D: True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_RxuMjqobaRu"
+      },
+      "source": [
+        "### **Exercise 002**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "21ulfm2AbfI1",
+        "outputId": "d15b92a0-e546-4fe1-a834-5848851f84a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "A = np.array([[3, 2, 1, 4],\n",
+        "              [5, 2, 1, 6]])\n",
+        "\n",
+        "B = np.array([[3, 2, 1, 4],\n",
+        "              [5, 2, 0, 6]])\n",
+        "\n",
+        "C = np.array([[True, False, False],\n",
+        "              [True, True, True]])\n",
+        "\n",
+        "for name, array in zip(list('ABC'), [A, B, C]):\n",
+        "    print(f'{name}: {np.all(array, axis = 1)}')"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A: [ True  True]\n",
+            "B: [ True False]\n",
+            "C: [False  True]\n"
           ],
           "name": "stdout"
         }
