--- a/NumPy100Exercises.ipynb
+++ b/NumPy100Exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMA+hiMWJB5xeU2P+9xlttW",
+      "authorship_tag": "ABX9TyMTbRg5exqHgieD879RC5I8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "id": "4Mu850q-ZV94"
       },
       "source": [
-        "### **Exercise 001**"
+        "### **Exercise 001** np.all()"
       ]
     },
     {
@@ -83,17 +83,17 @@
         "id": "_RxuMjqobaRu"
       },
       "source": [
-        "### **Exercise 002**"
+        "### **Exercise 002** np.all()"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "21ulfm2AbfI1",
-        "outputId": "d15b92a0-e546-4fe1-a834-5848851f84a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "21ulfm2AbfI1",
+        "outputId": "d15b92a0-e546-4fe1-a834-5848851f84a8"
       },
       "source": [
         "import numpy as np\n",
@@ -119,6 +119,350 @@
             "A: [ True  True]\n",
             "B: [ True False]\n",
             "C: [False  True]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w9uNjtGDcdIb"
+      },
+      "source": [
+        "### **Exercise 003** np.any()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CID_xKpIciti",
+        "outputId": "d92beca8-1890-4de5-c5e4-82edc54785e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "A = np.array([[0, 0, 0],\n",
+        "              [0, 0, 0]])\n",
+        "\n",
+        "B = np.array([[0, 0, 0],\n",
+        "              [0, 1, 0]])\n",
+        "\n",
+        "C = np.array([[False, False, False],\n",
+        "              [True, False, False]])\n",
+        "\n",
+        "D = np.array([[0.1, 0.0]])\n",
+        "\n",
+        "for name, array in zip(list('ABCD'), [A, B, C, D]):\n",
+        "    print(f'{name}: {np.any(array)}')"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A: False\n",
+            "B: True\n",
+            "C: True\n",
+            "D: True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ymVGPyX4dwxp"
+      },
+      "source": [
+        "### **Exercise 004** np.any()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-ZUFSXeId1Wg",
+        "outputId": "4221d2ae-9cd2-4406-c34d-59785322aaa6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "A = np.array([[0, 0, 0],\n",
+        "              [0, 0, 0]])\n",
+        "\n",
+        "B = np.array([[0, 0, 0],\n",
+        "              [0, 1, 0]])\n",
+        "\n",
+        "C = np.array([[False, False, False],\n",
+        "              [True, False, False]])\n",
+        "\n",
+        "D = np.array([[0.1, 0.0]])\n",
+        "\n",
+        "for name, array in zip(list('ABCD'), [A, B, C, D]):\n",
+        "    print(f'{name}: {np.any(array, axis = 0)}')"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A: [False False False]\n",
+            "B: [False  True False]\n",
+            "C: [ True False False]\n",
+            "D: [ True False]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ns0V_gsor5AU"
+      },
+      "source": [
+        "### **Exercise 005** np.isnan()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v8HlCl1qsAJs",
+        "outputId": "6dc1351d-6db1-4829-96ae-cfa1bbb12c21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "A = np.array([[3, 2, 1, np.nan],\n",
+        "              [5, np.nan, 1, 6]])\n",
+        "\n",
+        "print(np.isnan(A))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[False False False  True]\n",
+            " [False  True False False]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ijyiAjyrsyAx"
+      },
+      "source": [
+        "### **Exercise 006** np.allclose()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rXEErBHIs4l0",
+        "outputId": "350d848b-0727-48d6-c3c5-1962cff3e5b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        " \n",
+        " \n",
+        "A = np.array([0.4, 0.5, 0.3])\n",
+        "B = np.array([0.39999999, 0.5000001, 0.3])\n",
+        " \n",
+        "print(np.allclose(A, B))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Iyqn6nBKtLE1"
+      },
+      "source": [
+        "### **Exercise 007** =="
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WFhKL7eftRDQ",
+        "outputId": "210b8026-a0a2-453d-da51-b9f6aafb8810",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "A = np.array([0.4, 0.5, 0.3])\n",
+        "B = np.array([0.3999999999, 0.5000000001, 0.3])\n",
+        "\n",
+        "print(A == B)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[False False  True]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PpEZ63MdthcY"
+      },
+      "source": [
+        "### **Exercise 008** >"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZJ9PlP-ctup7",
+        "outputId": "0d89bb3c-3b5a-4617-bb9b-887365af1565",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "A = np.array([0.4, 0.5, 0.3, 0.9])\n",
+        "B = np.array([0.38, 0.51, 0.3, 0.91])\n",
+        "\n",
+        "print(A > B)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ True False False False]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rzkacDzFuH8C"
+      },
+      "source": [
+        "### **Exercise 009** np.zeros()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mrnlM-4luNYQ",
+        "outputId": "2514e3ad-c1d8-47df-83c8-390e24b83265",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "print(np.zeros((4, 4), dtype = int))"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0 0 0 0]\n",
+            " [0 0 0 0]\n",
+            " [0 0 0 0]\n",
+            " [0 0 0 0]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sVrISDUbuXhK"
+      },
+      "source": [
+        "### **Exercise 010** np.ones()  np.full()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ii0E6HZIvBMJ",
+        "outputId": "63310dbf-f271-4e3b-965a-5dbe6058a281",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "print(np.ones((10, 10), dtype = float) * 255)\n",
+        "print(\"\\n\")\n",
+        "print(np.full((10, 10), 255, dtype = float))"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]]\n",
+            "\n",
+            "\n",
+            "[[255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
+            " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]]\n"
           ],
           "name": "stdout"
         }
