--- a/NumPy100Exercises.ipynb
+++ b/NumPy100Exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTbRg5exqHgieD879RC5I8",
+      "authorship_tag": "ABX9TyOeykMwH6w4T/XA1k89Wcln",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -136,11 +136,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CID_xKpIciti",
-        "outputId": "d92beca8-1890-4de5-c5e4-82edc54785e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CID_xKpIciti",
+        "outputId": "d92beca8-1890-4de5-c5e4-82edc54785e2"
       },
       "source": [
         "import numpy as np\n",
@@ -186,11 +186,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-ZUFSXeId1Wg",
-        "outputId": "4221d2ae-9cd2-4406-c34d-59785322aaa6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-ZUFSXeId1Wg",
+        "outputId": "4221d2ae-9cd2-4406-c34d-59785322aaa6"
       },
       "source": [
         "import numpy as np\n",
@@ -236,11 +236,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "v8HlCl1qsAJs",
-        "outputId": "6dc1351d-6db1-4829-96ae-cfa1bbb12c21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v8HlCl1qsAJs",
+        "outputId": "6dc1351d-6db1-4829-96ae-cfa1bbb12c21"
       },
       "source": [
         "import numpy as np\n",
@@ -274,11 +274,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rXEErBHIs4l0",
-        "outputId": "350d848b-0727-48d6-c3c5-1962cff3e5b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rXEErBHIs4l0",
+        "outputId": "350d848b-0727-48d6-c3c5-1962cff3e5b1"
       },
       "source": [
         "import numpy as np\n",
@@ -312,11 +312,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WFhKL7eftRDQ",
-        "outputId": "210b8026-a0a2-453d-da51-b9f6aafb8810",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WFhKL7eftRDQ",
+        "outputId": "210b8026-a0a2-453d-da51-b9f6aafb8810"
       },
       "source": [
         "import numpy as np\n",
@@ -349,11 +349,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZJ9PlP-ctup7",
-        "outputId": "0d89bb3c-3b5a-4617-bb9b-887365af1565",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZJ9PlP-ctup7",
+        "outputId": "0d89bb3c-3b5a-4617-bb9b-887365af1565"
       },
       "source": [
         "import numpy as np\n",
@@ -386,11 +386,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mrnlM-4luNYQ",
-        "outputId": "2514e3ad-c1d8-47df-83c8-390e24b83265",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mrnlM-4luNYQ",
+        "outputId": "2514e3ad-c1d8-47df-83c8-390e24b83265"
       },
       "source": [
         "import numpy as np\n",
@@ -423,11 +423,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ii0E6HZIvBMJ",
-        "outputId": "63310dbf-f271-4e3b-965a-5dbe6058a281",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ii0E6HZIvBMJ",
+        "outputId": "63310dbf-f271-4e3b-965a-5dbe6058a281"
       },
       "source": [
         "import numpy as np\n",
@@ -463,6 +463,321 @@
             " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
             " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]\n",
             " [255. 255. 255. 255. 255. 255. 255. 255. 255. 255.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0ZyKCSWl8DMU"
+      },
+      "source": [
+        "### **Exercise 011** np.arange()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gAQdmjyI8PKn",
+        "outputId": "ddeaf37c-5b32-41a2-94c2-66a087f693da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "print(np.arange(10, 100, 1, dtype = int))"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33\n",
+            " 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57\n",
+            " 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81\n",
+            " 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZUM6fMbF9O2u"
+      },
+      "source": [
+        "### **Exercise** 012 np.arange() np.ndarray.reshape()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uQiNKKak9ZPI",
+        "outputId": "55ce6825-e204-49fe-f897-208dc34a109e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "ar = np.arange(10, 100, 1, dtype = int)\n",
+        "\n",
+        "print(np.ndarray.reshape(ar, 9, 10))\n",
+        "print(\"\\n\")\n",
+        "print(np.arange(10, 100).reshape(9, 10))"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[10 11 12 13 14 15 16 17 18 19]\n",
+            " [20 21 22 23 24 25 26 27 28 29]\n",
+            " [30 31 32 33 34 35 36 37 38 39]\n",
+            " [40 41 42 43 44 45 46 47 48 49]\n",
+            " [50 51 52 53 54 55 56 57 58 59]\n",
+            " [60 61 62 63 64 65 66 67 68 69]\n",
+            " [70 71 72 73 74 75 76 77 78 79]\n",
+            " [80 81 82 83 84 85 86 87 88 89]\n",
+            " [90 91 92 93 94 95 96 97 98 99]]\n",
+            "\n",
+            "\n",
+            "[[10 11 12 13 14 15 16 17 18 19]\n",
+            " [20 21 22 23 24 25 26 27 28 29]\n",
+            " [30 31 32 33 34 35 36 37 38 39]\n",
+            " [40 41 42 43 44 45 46 47 48 49]\n",
+            " [50 51 52 53 54 55 56 57 58 59]\n",
+            " [60 61 62 63 64 65 66 67 68 69]\n",
+            " [70 71 72 73 74 75 76 77 78 79]\n",
+            " [80 81 82 83 84 85 86 87 88 89]\n",
+            " [90 91 92 93 94 95 96 97 98 99]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-JwideuR-G0a"
+      },
+      "source": [
+        "### **Exercise 013** np.eye()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cZhOHnso-O9I",
+        "outputId": "72fdf50f-0c24-4542-95ba-4e144a3b66ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "print(np.eye(6, dtype = int))"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1 0 0 0 0 0]\n",
+            " [0 1 0 0 0 0]\n",
+            " [0 0 1 0 0 0]\n",
+            " [0 0 0 1 0 0]\n",
+            " [0 0 0 0 1 0]\n",
+            " [0 0 0 0 0 1]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yT7RurO8-vdj"
+      },
+      "source": [
+        "### **Exercise 014** np.random.rand()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-X0E1L_Z-2r6",
+        "outputId": "79689fed-bd14-4004-e158-a595c6963193"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "np.random.seed(10)\n",
+        "print(np.random.rand(30))"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.77132064 0.02075195 0.63364823 0.74880388 0.49850701 0.22479665\n",
+            " 0.19806286 0.76053071 0.16911084 0.08833981 0.68535982 0.95339335\n",
+            " 0.00394827 0.51219226 0.81262096 0.61252607 0.72175532 0.29187607\n",
+            " 0.91777412 0.71457578 0.54254437 0.14217005 0.37334076 0.67413362\n",
+            " 0.44183317 0.43401399 0.61776698 0.51313824 0.65039718 0.60103895]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7K6NlXQ5ANvQ"
+      },
+      "source": [
+        "### **Exercise 015** np.random.randn()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0qKlKaGrAdOX",
+        "outputId": "81df3480-d769-47ef-d99e-f80028a11fa5"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "np.random.seed(20)\n",
+        "print(np.random.randn(10, 4))"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 0.88389311  0.19586502  0.35753652 -2.34326191]\n",
+            " [-1.08483259  0.55969629  0.93946935 -0.97848104]\n",
+            " [ 0.50309684  0.40641447  0.32346101 -0.49341088]\n",
+            " [-0.79201679 -0.84236793 -1.27950266  0.24571517]\n",
+            " [-0.0441948   1.56763255  1.05110868  0.40636843]\n",
+            " [-0.1686461  -3.18970279  1.12013226  1.33277821]\n",
+            " [-0.24333877 -0.13003071 -0.10901737  1.55618644]\n",
+            " [ 0.12877835 -2.06694872 -0.88549315 -1.10457948]\n",
+            " [ 0.93286635  2.059838   -0.93493796 -1.61299022]\n",
+            " [ 0.52706972 -1.55110074  0.32961334 -1.13652654]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tCnyLDxIBBlC"
+      },
+      "source": [
+        "### **Exercise 016** np.random.randn()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "63PlJkRXBHit",
+        "outputId": "fbb22d5f-3b36-4121-a75a-3b682fa19e0e"
+      },
+      "source": [
+        "import numpy as np\n",
+        " \n",
+        "np.random.seed(30)\n",
+        " \n",
+        "sigma = np.sqrt(5)\n",
+        "mu = 100\n",
+        "\n",
+        "print(sigma * np.random.randn(10, 4) + mu)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 97.17349231 103.41650023  97.82942436 101.05220329]\n",
+            " [ 99.7748353  100.67930221  96.14063068 103.544381  ]\n",
+            " [100.30029631  97.52499594 103.52901961 100.24037271]\n",
+            " [ 98.29153712  98.2666258  103.09437633 101.70027274]\n",
+            " [ 99.36127721 101.20382627  95.34026547 102.09694365]\n",
+            " [ 99.98708001  98.95468525  99.05410904 102.38025432]\n",
+            " [ 93.50787269 103.61547679 103.18753701  98.51356237]\n",
+            " [102.20256689  96.19764407  97.54000366  97.05813038]\n",
+            " [101.81233513  97.66380453  98.45883627  98.09317768]\n",
+            " [102.48979932  95.70413391  98.43161651 101.89861815]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SLI6VTMcGhh4"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_H0V1mUUGlZs"
+      },
+      "source": [
+        "### **Exercise 017** np.nditer()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8j9FDckHHcBf",
+        "outputId": "aba6e5ed-5dc0-4cea-c908-9b28687e3658"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "A = np.array([[1, 4, 3], [5, 2, 6]])\n",
+        "\n",
+        "for x in np.nditer(A):\n",
+        "  print(x)"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "4\n",
+            "3\n",
+            "5\n",
+            "2\n",
+            "6\n"
           ],
           "name": "stdout"
         }
