--- a/NumPy100Exercises.ipynb
+++ b/NumPy100Exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOeykMwH6w4T/XA1k89Wcln",
+      "authorship_tag": "ABX9TyNWjZ8ENs6sesV8+To5Wae1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -480,11 +480,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gAQdmjyI8PKn",
-        "outputId": "ddeaf37c-5b32-41a2-94c2-66a087f693da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gAQdmjyI8PKn",
+        "outputId": "ddeaf37c-5b32-41a2-94c2-66a087f693da"
       },
       "source": [
         "import numpy as np\n",
@@ -517,11 +517,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uQiNKKak9ZPI",
-        "outputId": "55ce6825-e204-49fe-f897-208dc34a109e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uQiNKKak9ZPI",
+        "outputId": "55ce6825-e204-49fe-f897-208dc34a109e"
       },
       "source": [
         "import numpy as np\n",
@@ -574,11 +574,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cZhOHnso-O9I",
-        "outputId": "72fdf50f-0c24-4542-95ba-4e144a3b66ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cZhOHnso-O9I",
+        "outputId": "72fdf50f-0c24-4542-95ba-4e144a3b66ed"
       },
       "source": [
         "import numpy as np\n",
@@ -778,6 +778,40 @@
             "5\n",
             "2\n",
             "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pJl3vXD8IjsH"
+      },
+      "source": [
+        "### **Exercise 018** np.linspace()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1esJFg5zIoT3",
+        "outputId": "dba3b4b8-e6ea-416e-baff-2fe58fde53d6"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "print(np.linspace(0, 1, 11))"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1. ]\n"
           ],
           "name": "stdout"
         }
